--- a/org.evansnet.common/.project
+++ b/org.evansnet.common/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.evansnet.common</name>
+	<name>org.evansnet.model.common</name>
 	<comment></comment>
 	<projects>
 	</projects>
